Correctly position sidebars on small screens

--- a/src/furo/assets/styles/_scaffold.sass
+++ b/src/furo/assets/styles/_scaffold.sass
@@ -407,7 +407,7 @@ article
   .content
     padding: 0 $content-padding--small
     // Don't float sidebars to the right.
-  article div.sidebar
+  article aside.sidebar
     float: none
     width: 100%
     margin: 1rem 0
